--- a/anasayfa.html
+++ b/anasayfa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
+    <style type="text/css">
         /* Tekli yorum satırı */
         body{
             background-color: #e6e3c1;
